tests/spec/lex/snapshots/raw_string_with_windows_path.snap
---
source: tests/spec/lex/mod.rs
description: "r\"C:\\Users\\me\""
---
LexResult {
    tokens: [
        Token {
            kind: RawString,
            text: "r\"C:\\Users\\me\"",
            byte_offset: 0,
            byte_length: 14,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 14,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
