tests/spec/lex/snapshots/scientific_basic.snap
---
source: tests/spec/lex/mod.rs
description: "1e10"
---
LexResult {
    tokens: [
        Token {
            kind: Float,
            text: "1e10",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
