tests/spec/lex/snapshots/scientific_negative_exponent.snap
---
source: tests/spec/lex/mod.rs
description: "1.5e-10"
---
LexResult {
    tokens: [
        Token {
            kind: Float,
            text: "1.5e-10",
            byte_offset: 0,
            byte_length: 7,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 7,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
