tests/spec/lex/snapshots/scientific_uppercase_e.snap
---
source: tests/spec/lex/mod.rs
description: "1E10"
---
LexResult {
    tokens: [
        Token {
            kind: Float,
            text: "1E10",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
